jlamontSC-test/src/objects/Other_Entity_Event__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <formula>Club_Event__r.Campaign__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Club_Entity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Club Entity</label>
        <referenceTo>Club_Entity__c</referenceTo>
        <relationshipLabel>Other Entity Events</relationshipLabel>
        <relationshipName>Other_Entity_Events</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Club_Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Club Event</label>
        <referenceTo>Club_Event__c</referenceTo>
        <relationshipLabel>Other Entity Events</relationshipLabel>
        <relationshipName>Other_Entity_Events</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EntityId__c</fullName>
        <formula>Club_Entity__r.EntityId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EntityId</label>
        <type>Text</type>
    </fields>
    <label>Other Entity Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OEA-{00000000}</displayFormat>
        <label>Other Entity Events Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Entity Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>